--- a/slides/investment-banking/3-advisory.mdx
+++ b/slides/investment-banking/3-advisory.mdx
@@ -11,48 +11,62 @@
 
 # Advisory
 
-- Assistance in Transactions M&A
-- Debt Restructuring
+__Advisory__ is one of the __oldest services__ provided by investment banks and can be structured as __Assistance in M&A transactions__ and __Debt Restructuring__.
 
-Why are M&A important?
-Sometimes it's cheaper to acquire a company than generating internally, 1+1 > 2, 
-by leveraging Savings, Efficiencies and Opportunities (Synergies). Important to acquire IP, key personal and know-how. 
 
-Why do companies need Help from Investment Banks?
-	- Investment Banks have deep industry Knowledge (Tend to advise multiple companies in the industry so have a deeper knowledge/ perspective of the markets)
-	- Help finding bidders or targets
-  - M&A Specific know-how
+## Why is M&A important?
+
+Sometimes it is cheaper to acquire a company than generating the business internally. 
+It's common to say that in M&A <Emphasis>1 + 1 > 2</Emphasis> because companies 
+end up __leveraging savings__, __efficiencies__ and __opportunities__ (Synergies).
+Companies also acquire important __intellectual property__ (IP), __key personal__ and 
+__industry know-how__ via M&A. 
+
+## How do investment banks help?
+
+Investment banks have __deep industry knowledge__, because they tend to advise multiple 
+companies in the same industry and that gives them an __unique perspective of the market__. 
+This same perspective and their long contact list puts them in a very good place to 
+__find potential bidders and targets__.
 
 --- 
 
-Investment Banks can be:
-	Buy-Side (buyer)
-	Sell-Side (Target)
-	
-	Usually prefer to be on Sell-Side given is more certain to make a deal, likely to transact and guaranteed fees.
-	Buy side receive a Retainer fee + Success fee 
-	
-	Responsibility Sell Side Bankers
-		- Find large number of bidders
-		- Prepare company for all questions asked by buyers
-		- Make valuation of the business and suggest minimum bidding price
-		- Coordinate the sales process
-	
-	Buy side
-		- Strategic advice
-		- Provide valuation of target
-		- Estimate synergies
-	
-	Valuation is an important role in M&A and can be the difference between a done deal and a non deal. 
-	Valuation Techniques
-		DCF (Discounted Cash Flow)
-		Multiples (EBITDA/EBIT/REVENUE)
-			- Transactions of comparable firms (sector/geo/size/growth)
-		LBO
-		Market price
-			- Share price x number of shares (Equity Value)
+# Advisory - M&A transactions
 
-M&A Lifecycle
+## Context
+
+Investment Banks can be:
+Buy-Side (buyer)
+Sell-Side (Target)
+
+Usually prefer to be on Sell-Side given is more certain to make a deal, likely to transact and guaranteed fees.
+Buy side receive a Retainer fee + extra fee on completion.
+
+Responsibility Sell Side Bankers
+	- Find large number of bidders
+	- Prepare company for all questions asked by buyers
+	- Make valuation of the business and suggest minimum bidding price
+	- Coordinate the sales process
+
+Buy side
+	- Strategic advice
+	- Provide valuation of target
+	- Estimate synergies
+
+Valuation is an important role in M&A and can be the difference between a done deal and a non deal. 
+Valuation Techniques
+	DCF (Discounted Cash Flow)
+	Multiples (EBITDA/EBIT/REVENUE)
+		- Transactions of comparable firms (sector/geo/size/growth)
+	LBO
+	Market price
+		- Share price x number of shares (Equity Value)
+
+---
+
+# Advisory - M&A transactions
+
+## M&A Lifecycle
 
 Company stage lifecycle:
 	- Development (early days, start-up)
@@ -102,43 +116,50 @@ Financial vs Corporate Buyers
 Leveraged Buyout funds -> Mature Companies
 
 ---
+# Advisory - Restructuring Services
 
-Restructuring Services
-	Necessary when a firm is in danger of going bankrupt. Why does that happen?
-	Things change, and sometimes unforeseen circumstances can materialize.
-	Operating difficulties, Financial difficulties
+## Context
+
+Necessary when a firm is in danger of going bankrupt. Why does that happen?
+Things change, and sometimes unforeseen circumstances can materialize.
+Operating difficulties, Financial difficulties
+
+2 Main options (Private Workout and Bankruptcy Procedure in Court)
+Private workout if preferable given it provides faster results and has a higher recovery rate
+
+Causes that led to restructuring
+	- Product obsolescence
+	- Industry decline
+	- Bad Investments
+	- Lack of innovation
+	- Operational Inefficiency
+	- Bad Management
+	- Bad M&A Deals
+	- Excessive Leverage
+	- -> leads to Insufficient money to pay suppliers and employees (operating activities)
 	
-	2 Main options (Private Workout and Bankruptcy Procedure in Court)
-	Private workout if preferable given it provides faster results and has a higher recovery rate
+---
+
+# Advisory - Restructuring Services
+
+## Types of restructuring
+
+- Asset side restructuring
+	- Sale of non-core assets
+	- Cost cutting of existing business
+	- Less Capex
+	- Sale of controlled firms
+- Liability side restructuring
+	- Agreement between creditors to alter the conditions:
+			- Suspending interests
+			- Debt write-off
+			- Debit-Equity swap
+			- Convertible bonds
+
 	
-	Causes that led to restructuring
-		- Product obsolescence
-		- Industry decline
-		- Bad Investments
-		- Lack of innovation
-		- Operational Inefficiency
-		- Bad Management
-		- Bad M&A Deals
-		- Excessive Leverage
-		- -> leads to Insufficient money to pay suppliers and employees (operating activities)
-	
-	Types of restructuring
-	
-		- Asset side restructuring
-			- Sale of non-core assets
-			- Cost cutting of existing business
-			- Less Capex
-			- Sale of controlled firms
-		- Liability side restructuring
-			- Agreement between creditors to alter the conditions:
-				□ Suspending interests
-				□ Debt write-off
-				□ Debit-Equity swap
-				□ Convertible bonds
-	
-	Creditors need to assess 3 parameters:
-		- Probability of default
-		- Loss given default: Liquidation
-Successful Restructuring
+Creditors need to assess 3 parameters:
+	- Probability of default
+	- Loss given default (Liquidation)
+	- Successful Restructuring
 
 </Section>
