--- a/slides/investment-banking/3-advisory.mdx
+++ b/slides/investment-banking/3-advisory.mdx
@@ -33,133 +33,99 @@ __find potential bidders and targets__.
 
 # Advisory - M&A transactions
 
-## Context
+Investment Banks can advise two sides of a transaction, the __buy-side__ (buyer) or the __sell-side__ (target/vendor).
+Banks usually prefer to be on the __sell-side__ given the likeliness to transact is higher and therefore, __guaranteed fees__.
+On the other hand, banks that advise the __buy-side__ receive a __retainer fee__ and __an extra fee__ on deal completion.
 
-Investment Banks can be:
-Buy-Side (buyer)
-Sell-Side (Target)
+### Sell-side key responsibilities
 
-Usually prefer to be on Sell-Side given is more certain to make a deal, likely to transact and guaranteed fees.
-Buy side receive a Retainer fee + extra fee on completion.
-
-Responsibility Sell Side Bankers
-	- Find large number of bidders
-	- Prepare company for all questions asked by buyers
-	- Make valuation of the business and suggest minimum bidding price
+	- Find a large number of bidders
+	- Prepare the company for all questions asked by buyers
+	- Make valuation (__DCF, Multiples, LBO__) of the business and suggest minimum bidding price
 	- Coordinate the sales process
 
-Buy side
+### Buy-side key responsibilities
 	- Strategic advice
 	- Provide valuation of target
 	- Estimate synergies
 
-Valuation is an important role in M&A and can be the difference between a done deal and a non deal. 
-Valuation Techniques
-	DCF (Discounted Cash Flow)
-	Multiples (EBITDA/EBIT/REVENUE)
-		- Transactions of comparable firms (sector/geo/size/growth)
-	LBO
-	Market price
-		- Share price x number of shares (Equity Value)
+
+--- 
+
+# Advisory - M&A transactions
+
+## Company lifecycle
+
+- __Development (early days, start-up)__
+	- Rarely acquire other companies
+	- acquired for their innovative ideas and quality team
+- __Growth (scale-up)__
+	- Very attractive for potential acquires
+	- Defensive M&A of smaller firms
+- __Maturity (very profitable)__
+	- Frequent buyer of Startups, Scaleups
+	- Mergers of equals (Merger of competitors)
+- __Decline (loses market share)__
+	- Acquired for its name, IP, know-how or brands 
+
+--- 
+
+# Advisory - M&A transactions
+
+## Transaction types
+
+- __Private transactions (1 or 2 bidders)__
+		- Easy to organise
+		- No sense of urgency for the buyer
+		- Often avoided by sell-side bankers
+- __Auction (bidding contest)__
+		- Involves tens of interested bidders (aim to get 5/6 bidders)
+		- The perception of competition increases the price
+- __Acquisition of listed companies__
+		- Complicated due to regulatory requirements
+		- Friendly or hostile takeover
+		- Much easier valuation
+		- Buyers often offer a premium on top of share price
 
 ---
 
 # Advisory - M&A transactions
 
-## M&A Lifecycle
+## Buyer types
 
-Company stage lifecycle:
-	- Development (early days, start-up)
-	- Growth (Scale-up)
-	- Maturity (very profitable)
-	- Decline (loses market share)
+__Corporate Buyers__ are firms operating in the same industry as the target,
+that look for __synergies__ and __long-term investment__.
+Usually __integrate management__ from the two companies.
 
-M&A
-	- Development  (bolt-on acquisitions)
-		- Rarely acquire other companies
-		- acquired for their innovative ideas and quality team
-	- Growth (Acquisitions)
-		- Very attractive for potential acquires
-		- Defensive M&A of smaller firms
-	- Maturity (Mergers, LBO)
-		- Frequent buyer of Startups, Scaleups
-		- Mergers of equals (Merger of competitors)
-	- Decline (Takeover, Restructuring)
-		- Acquired for name, IP, know-how or brands 
+__Financial Buyers__ are firms that __focus on cash flows and capital gains__ with
+a __short term investment horizon__ (3-5 years) and do not operate in the target's industry.
 
-Types of M&A transactions
-	- Private transactions (1 or 2 bidders)
-		- Easy to organise
-		- No sense of urgency for the buyer
-		- Often avoided by sell-side bankers
-	- Auction (bidding contest)
-		- Involves tens of interested bidders (aim to get 5/6 bidders)
-		- The perception of competition increases the price
-	- Acquisition of listed companies
-		- Complicated due to regulatory requirements
-		- Friendly or hostile takeover
-		- Much easier valuation
-Buyers often offer a premium on top of share price
+Different __financials buyers__ have different goals and focus on different company growth stages.
 
-Financial vs Corporate Buyers
-	- Corporate Buyers are firms operating in the same industry as the Target
-		- Looking for synergies
-		- Long term investment
-		- Integration of management of the two companies
-	- Financial Buyers 
-		- Focus on cash flows and capital gains
-		- 3/5 year investment horizon
-		- Do not operate in the target's industry
-		- Looking for:
-			- Venture Capital Funds -> Startup
-			- Private Equity Funds -> Growth Companies
-Leveraged Buyout funds -> Mature Companies
+
+__Venture Capital Funds__ tend to focus on __Startups__, 
+__Private Equity Funds__ tend to focus on __Growth Companies__ and 
+__Leveraged Buyout funds__ tend to focus on __Mature Companies__
 
 ---
+
 # Advisory - Restructuring Services
 
-## Context
+__Restructuring services__ are necessary when a firm is in danger of going bankrupt. 
+Some of the reasons why companies need restructuring varies, 
+sometimes unforeseen circumstances can materialize that __ultimately leads to 
+operating and financial difficulties__.
 
-Necessary when a firm is in danger of going bankrupt. Why does that happen?
-Things change, and sometimes unforeseen circumstances can materialize.
-Operating difficulties, Financial difficulties
-
-2 Main options (Private Workout and Bankruptcy Procedure in Court)
-Private workout if preferable given it provides faster results and has a higher recovery rate
-
-Causes that led to restructuring
+Some of the causes that lead to restructuring are:
 	- Product obsolescence
 	- Industry decline
 	- Bad Investments
 	- Lack of innovation
-	- Operational Inefficiency
-	- Bad Management
-	- Bad M&A Deals
-	- Excessive Leverage
-	- -> leads to Insufficient money to pay suppliers and employees (operating activities)
-	
----
+	- Operational inefficiencies
+	- Bad management
+	- Bad M&A deals
+	- Excessive leverage (debt)
 
-# Advisory - Restructuring Services
-
-## Types of restructuring
-
-- Asset side restructuring
-	- Sale of non-core assets
-	- Cost cutting of existing business
-	- Less Capex
-	- Sale of controlled firms
-- Liability side restructuring
-	- Agreement between creditors to alter the conditions:
-			- Suspending interests
-			- Debt write-off
-			- Debit-Equity swap
-			- Convertible bonds
-
-	
-Creditors need to assess 3 parameters:
-	- Probability of default
-	- Loss given default (Liquidation)
-	- Successful Restructuring
+___ 
 
 </Section>
