--- a/slides/investment-banking/3-advisory.mdx
+++ b/slides/investment-banking/3-advisory.mdx
@@ -41,7 +41,7 @@ On the other hand, banks that advise the __buy-side__ receive a __retainer fee__
 
 	- Find a large number of bidders
 	- Prepare the company for all questions asked by buyers
-	- Make valuation (__DCF, Multiples, LBO__) of the business and suggest minimum bidding price
+	- Make valuation of the business (__DCF, Multiples, LBO__) and suggest minimum bidding price
 	- Coordinate the sales process
 
 ### Buy-side key responsibilities
@@ -58,9 +58,9 @@ On the other hand, banks that advise the __buy-side__ receive a __retainer fee__
 
 - __Development (early days, start-up)__
 	- Rarely acquire other companies
-	- acquired for their innovative ideas and quality team
+	- Acquired for their innovative ideas and quality team
 - __Growth (scale-up)__
-	- Very attractive for potential acquires
+	- Very attractive for potential acquirers
 	- Defensive M&A of smaller firms
 - __Maturity (very profitable)__
 	- Frequent buyer of Startups, Scaleups
@@ -79,13 +79,13 @@ On the other hand, banks that advise the __buy-side__ receive a __retainer fee__
 		- No sense of urgency for the buyer
 		- Often avoided by sell-side bankers
 - __Auction (bidding contest)__
-		- Involves tens of interested bidders (aim to get 5/6 bidders)
+		- Involves tens of interested bidders (aim to get 5/6 final bidders)
 		- The perception of competition increases the price
 - __Acquisition of listed companies__
 		- Complicated due to regulatory requirements
 		- Friendly or hostile takeover
 		- Much easier valuation
-		- Buyers often offer a premium on top of share price
+		- Buyers often __offer a premium__ on top of share price
 
 ---
 
@@ -125,6 +125,11 @@ Some of the causes that lead to restructuring are:
 	- Bad management
 	- Bad M&A deals
 	- Excessive leverage (debt)
+
+Investment banks help by advising companies throughout the restructuring process 
+and assessing the best possible course of action either by 
+an __asset restructuring__ (sale non-core assets, cost-cutting) or a 
+__liability restructuring__ (convertible bonds, suspending interest payments, debt write-off).
 
 ___ 
 
